--- a/src/components/workstation/Workstation.css
+++ b/src/components/workstation/Workstation.css
@@ -2,6 +2,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  min-height: 0;
 }
 
 .workstation__toolbar {
@@ -21,6 +22,7 @@
   z-index: 0;
   flex: 1;
   display: flex;
+  min-height: 0;
 }
 
 .editor__dropzone {
