--- a/src/components/workstation/scrubber/Scrubber.css
+++ b/src/components/workstation/scrubber/Scrubber.css
@@ -14,7 +14,8 @@
 .scrubber__timeline {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  flex: 1;
+  min-height: 0;
   padding: 0 0;
   overflow-y: scroll;
 }
